--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,9 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1">
 
-<web-app>
-     
-  
   <display-name>Archetype Created Web Application</display-name>
   
   
@@ -16,8 +15,9 @@
   <!--设置配置文件的路径-->
    <context-param>
      <param-name>contextConfigLocation</param-name>
-     <param-value>classpath:applicationContext.xml</param-value>
+     <param-value>classpath:applicationContext.xml,classpath:spirng-security.xml</param-value>
    </context-param>
+
 
   <!--配置前端控制器-->
   <servlet>
@@ -38,8 +38,10 @@
 
 
    <!--解决中文乱码的过滤器-->
+
   <filter>
-    <filter-name>characterEncodingFilter</filter-name>
+    <filter-name>CharacterEncodingFilter</filter-name>
+
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
     <init-param>
       <param-name>encoding</param-name>
@@ -47,9 +49,23 @@
     </init-param>
   </filter>
   <filter-mapping>
-    <filter-name>characterEncodingFilter</filter-name>
+    <filter-name>CharacterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+
+
+  <!--spring security的过滤器-->
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+
 
 
 </web-app>
